service.yml
# Service Owncloud
apiVersion: v1
kind: Service
metadata:
  name: owncloud-service
spec:
  selector:
    app: owncloud
  ports:
  - port: 80
    targetPort: 80
    name: owncloud-container
