ingress.yml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud-ingress
  labels:
    name: owncloud-ingress
spec:
  rules:
    - host: dev-k8s-owncloud.brilife.co.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: owncloud-service
                 port:
                   number: 80
